--- a/totsnyc/Gemfile
+++ b/totsnyc/Gemfile
@@ -3,6 +3,7 @@ source 'http://rubygems.org'
 gem 'rails', '3.0.4'
 gem 'haml'
 gem 'annotate-models'
+gem 'railroady'
 
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
