--- a/python/crunch.ini
+++ b/python/crunch.ini
@@ -1,4 +1,7 @@
+[Common]
+CrunchOutDir=/home/ec2-user/crunchtest
+
 [Config]
-DBFile=/tmp/crunch.db
-RawDataDir=/tmp/crunch/crunch
-RateLimit=30
+DBFile=/home/ec2-user/crunchtest/people.db
+RawDataDir=/home/ec2-user/crunchtest/people
+RateLimit=40
