--- a/pretty/Gemfile
+++ b/pretty/Gemfile
@@ -37,5 +37,4 @@ gem 'nifty-generators'
 gem 'compass', git: 'git://github.com/chriseppstein/compass.git'
 gem "mocha", :group => :test
 gem 'rails3-jquery-autocomplete'
-
-
+gem 'formtastic', :git => 'git://github.com/justinfrench/formtastic.git'
