--- a/rent/Gemfile
+++ b/rent/Gemfile
@@ -38,4 +38,5 @@ gem 'nifty-generators'
 gem 'formtastic', :git => 'git://github.com/justinfrench/formtastic.git'
 gem 'sorcery'
 gem 'cancan'
+gem 'geocoder'
 gem 'rack', '1.3.3'
